--- a/client/src/app/pages/create-profile/create-profile.component.html
+++ b/client/src/app/pages/create-profile/create-profile.component.html
@@ -94,7 +94,7 @@
     </div>
   </div>
   <div class="container__full">
-    <action-button type="flat" title="Next" color="primary" (click)="goToNextPage()"></action-button>
+    <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()"></action-button>
   </div>
 </div>
 
@@ -108,7 +108,7 @@
       <h3 class="about-form__title">
         ABOUT ME
       </h3>
-      <div class="about-form__field">
+      <div class="about-form__field textarea">
         <mat-form-field>
           <textarea matInput placeholder="Explain Brief About Yourself" rows="15" [(ngModel)]="about_me" value="about_me"></textarea>
         </mat-form-field>
@@ -116,7 +116,7 @@
     </div>
   </div>
   <div class="container__full">
-    <action-button type="flat" title="Next" color="primary" (click)="goToNextPage()"></action-button>
+    <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()"></action-button>
   </div>
 </div>
 
