Implement registration flow - Integrate autocomplete API

--- a/client/src/app/pages/create-profile/create-profile.component.scss
+++ b/client/src/app/pages/create-profile/create-profile.component.scss
@@ -237,7 +237,7 @@ p {
           max-width: 615px;
           border: solid 1px $mat-form-border-color;
           border-radius: 5px;
-          padding: 0 10px;
+          padding: 0;
           &.textarea {
             padding: 10px 20px 5px 20px;
           }
