--- a/client/src/app/components/toolbar/toolbar.component.html
+++ b/client/src/app/components/toolbar/toolbar.component.html
@@ -9,5 +9,5 @@
 <a routerLink='login' routerLinkActive="active-link">
   Login
 </a>
-<!-- 
-<action-button type="text" title="LogOut" color="accent" (click)="logOut()"></action-button> -->
+
+<action-button type="text" title="LogOut" color="accent" (click)="logOut()"></action-button>
