--- a/client/src/app/pages/style-guide/style-guide.component.html
+++ b/client/src/app/pages/style-guide/style-guide.component.html
@@ -114,3 +114,7 @@
 <simple-tag type="gray" title="Skill With Proficieny" ellipseTag="true" value="4"></simple-tag>
 <simple-tag title="Skill With Proficieny" ellipseTag="true" value="5"></simple-tag>
 <br><br>
+<action-button title="Open Snackbar Error" color="warn" (click)="openSnackBarError()"></action-button>
+<action-button title="Open Snackbar Warning" color="primary" (click)="openSnackBarWarning()"></action-button>
+<action-button title="Open Snackbar Success" type="stroked" (click)="openSnackBarSuccess()"></action-button>
+<br><br>
