--- a/client/src/app/pages/registration/registration.component.html
+++ b/client/src/app/pages/registration/registration.component.html
@@ -25,6 +25,8 @@
       <mat-form-field appearance="fill">
         <mat-label>Last Name</mat-label>
         <mat-icon matSuffix *ngIf="first_name.valid && last_name.valid">done</mat-icon>
+        <mat-icon matSuffix class="error-field" *ngIf="(!first_name.valid || !last_name.valid) && (first_name.touched && last_name.touched)">close</mat-icon>
+
         <input matInput placeholder="Last Name" type="text" [formControl]="last_name">
       </mat-form-field>
     </div>
@@ -34,6 +36,7 @@
         <mat-icon matPrefix>mail_outline</mat-icon>
         <input matInput placeholder="Email Address" type="email" [formControl]="emailAddress">
         <mat-icon matSuffix *ngIf="emailAddress.valid">done</mat-icon>
+        <mat-icon matSuffix class="error-field" *ngIf="!emailAddress.valid && emailAddress.touched">close</mat-icon>
       </mat-form-field>
     </div>
     <div class="row__form last">
@@ -42,6 +45,7 @@
         <mat-icon matPrefix>lock_outline</mat-icon>
         <input matInput placeholder="Password" type="password" [formControl]="password">
         <span matSuffix *ngIf="password.valid" [class.weak]="passwordStrength==='weak'" [class.medium]="passwordStrength==='medium'">{{passwordStrength}}</span>
+        <mat-icon matSuffix class="error-field" *ngIf="!emailAddress.valid && emailAddress.touched">close</mat-icon>
       </mat-form-field>
     </div>
     <div class="row__checkbox">
